refactor: 针对 Qdana 的优化